--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="Light">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -58,7 +58,7 @@
     <header class="header" data-header>
       <a href="/" class="logo">
         <img src="./image/logo-light.svg" alt="cook.io" class="logo-light" />
-        <img src="./image/logo-dark.svg" alt="cook.io" class="logo-darkt" />
+        <img src="./image/logo-dark.svg" alt="cook.io" class="logo-dark" />
       </a>
       <!-- nav-->
       <nav class="navbar">
@@ -91,7 +91,7 @@
       </button>
 
       <!-- icone save-->
-      <a href="./saved-recipes.html" class="btn btn-primary">
+      <a href="./saved-recipes.html" class="btn btn-primary has-icon">
         <span class="material-symbols-outlined" aria-hidden="true">book</span>
         <sapn class="span">Saved Recipes</sapn>
       </a>
