--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -53,7 +53,7 @@
   </head>
   <body>
     <!--
-      Header
+      ---------------------- Header ---------------------
     -->
     <header class="header" data-header>
       <a href="/" class="logo">
@@ -96,5 +96,88 @@
         <sapn class="span">Saved Recipes</sapn>
       </a>
     </header>
+
+    <!--
+      ---------------------- Mobile Nav ---------------------
+    -->
+    <nav class="mobile-nav" aria-label="primary">
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="./recipes.html" class="nav-link">
+            <span class="item-icon">
+              <span class="material-symbols-outlined" aria-hidden="true"
+                >lunch_dining</span
+              >
+            </span>
+            <span class="label-medium">Recipes</span>
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a href="#" class="nav-link" aria-current="true">
+            <span class="item-icon">
+              <span class="material-symbols-outlined" aria-hidden="true"
+                >home</span
+              >
+            </span>
+            <span class="label-medium">Home</span>
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a href="./saved-recipes.html" class="nav-link">
+            <span class="item-icon">
+              <span class="material-symbols-outlined" aria-hidden="true"
+                >book</span
+              >
+            </span>
+            <span class="label-medium">Saved</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+    <!--
+      ---------------------- Main ---------------------
+    -->
+    <main>
+      <article>
+        <!--
+      ---------------------- section__Hero ---------------------
+    -->
+        <section class="hero" aria-label="banner">
+          <div class="banner-card">
+            <h1 class="display_large">Your desired dish?</h1>
+            <div class="search-wrapper" data-search-icon>
+              <span
+                class="material-symbols-outlined leading-icon"
+                aria-hidden="true"
+                >local_dining</span
+              >
+              <input
+                type="search"
+                name="search"
+                aria-label="Search recipes"
+                placeholder="Search recipes..."
+                class="search-field body_medium"
+                data-search-field
+              />
+              <button class="search-submit" aria-label="Submit">
+                <span class="material-symbols-outlined" aria-hidden="true"
+                  >search</span
+                >
+              </button>
+            </div>
+            <p class="label_medium">
+              Search any recipe e.g: burger, pizza, sandwich, toast.
+            </p>
+          </div>
+        </section>
+
+        <!--
+      ---------------------- section__Tab---------------------
+    -->
+      </article>
+    </main>
   </body>
 </html>
