--- a/index.html
+++ b/index.html
@@ -259,74 +259,7 @@
               aria-labelledby="tab-1"
               tabindex="0"
               data-tab-panel
-            >
-              <div class="grid-list">
-                <div class="card skeleton-card">
-                  <div class="skeleton card-banner"></div>
-
-                  <div class="card-body">
-                    <div class="skeleton card-title"></div>
-                    <div class="skeleton card-text"></div>
-                  </div>
-                </div>
-
-                <div class="card">
-                  <figure class="card-media img-holder">
-                    <img
-                      src="./image/recipe.jpg"
-                      alt="recipe name"
-                      width="200"
-                      height="200"
-                      class="img-cover"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <div class="card-body">
-                    <h3 class="title_small">
-                      <a href="./detail.html" class="card-link"
-                        >Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Asperiores, nemo libero odit culpa et beatae
-                        repellendus at assumenda corrupti vitae animi iure
-                        consectetur ea quia ut rerum magni nobis architecto!</a
-                      >
-                    </h3>
-                    <div class="meta-wrapper">
-                      <div class="meta-item">
-                        <span
-                          class="material-symbols-outlined"
-                          aria-hidden="true"
-                          >schedule</span
-                        >
-
-                        <span class="label_medium">2 minutes</span>
-                      </div>
-
-                      <button
-                        class="icon-btn has-state removed"
-                        aria-label="Add to saved recipes"
-                      >
-                        <span
-                          class="material-symbols-outlined bookmark-add"
-                          aria-hidden="true"
-                          >bookmark_add</span
-                        >
-                        <span
-                          class="material-symbols-outlined bookmark"
-                          aria-hidden="true"
-                          >bookmark</span
-                        >
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <a
-                href="./recipes.html"
-                class="btn btn-secondary label_large has-state"
-                >Show more</a
-              >
-            </div>
+            ></div>
 
             <div
               class="tab-panel"
