--- a/index.html
+++ b/index.html
@@ -319,242 +319,7 @@
           class="section slider-setion"
           aria-label="slider-label-1"
           data-slider-section
-        >
-          <div class="container">
-            <h2 class="section-title headline_small" id="slider-label-1">
-              Lates Asia Recipes
-            </h2>
-            <div class="slider">
-              <ul class="slider-wrapper" data-slider-wrapper>
-                <li class="slider-item">
-                  <div class="card">
-                    <figure class="card-media img-holder">
-                      <img
-                        src="./image/recipe.jpg"
-                        alt="recipe name"
-                        width="200"
-                        height="200"
-                        class="img-cover"
-                        loading="lazy"
-                      />
-                    </figure>
-
-                    <div class="card-body">
-                      <h3 class="title_small">
-                        <a href="./detail.html" class="card-link"
-                          >Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Asperiores, nemo libero odit culpa et beatae
-                          repellendus at assumenda corrupti vitae animi iure
-                          consectetur ea quia ut rerum magni nobis
-                          architecto!</a
-                        >
-                      </h3>
-                      <div class="meta-wrapper">
-                        <div class="meta-item">
-                          <span
-                            class="material-symbols-outlined"
-                            aria-hidden="true"
-                            >schedule</span
-                          >
-
-                          <span class="label_medium">2 minutes</span>
-                        </div>
-
-                        <button
-                          class="icon-btn has-state removed"
-                          aria-label="Add to saved recipes"
-                        >
-                          <span
-                            class="material-symbols-outlined bookmark-add"
-                            aria-hidden="true"
-                            >bookmark_add</span
-                          >
-                          <span
-                            class="material-symbols-outlined bookmark"
-                            aria-hidden="true"
-                            >bookmark</span
-                          >
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-
-                <li class="slider-item">
-                  <div class="card">
-                    <figure class="card-media img-holder">
-                      <img
-                        src="./image/recipe.jpg"
-                        alt="recipe name"
-                        width="200"
-                        height="200"
-                        class="img-cover"
-                        loading="lazy"
-                      />
-                    </figure>
-
-                    <div class="card-body">
-                      <h3 class="title_small">
-                        <a href="./detail.html" class="card-link"
-                          >Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Asperiores, nemo libero odit culpa et beatae
-                          repellendus at assumenda corrupti vitae animi iure
-                          consectetur ea quia ut rerum magni nobis
-                          architecto!</a
-                        >
-                      </h3>
-                      <div class="meta-wrapper">
-                        <div class="meta-item">
-                          <span
-                            class="material-symbols-outlined"
-                            aria-hidden="true"
-                            >schedule</span
-                          >
-
-                          <span class="label_medium">2 minutes</span>
-                        </div>
-
-                        <button
-                          class="icon-btn has-state removed"
-                          aria-label="Add to saved recipes"
-                        >
-                          <span
-                            class="material-symbols-outlined bookmark-add"
-                            aria-hidden="true"
-                            >bookmark_add</span
-                          >
-                          <span
-                            class="material-symbols-outlined bookmark"
-                            aria-hidden="true"
-                            >bookmark</span
-                          >
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-
-                <li class="slider-item">
-                  <div class="card">
-                    <figure class="card-media img-holder">
-                      <img
-                        src="./image/recipe.jpg"
-                        alt="recipe name"
-                        width="200"
-                        height="200"
-                        class="img-cover"
-                        loading="lazy"
-                      />
-                    </figure>
-
-                    <div class="card-body">
-                      <h3 class="title_small">
-                        <a href="./detail.html" class="card-link"
-                          >Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Asperiores, nemo libero odit culpa et beatae
-                          repellendus at assumenda corrupti vitae animi iure
-                          consectetur ea quia ut rerum magni nobis
-                          architecto!</a
-                        >
-                      </h3>
-                      <div class="meta-wrapper">
-                        <div class="meta-item">
-                          <span
-                            class="material-symbols-outlined"
-                            aria-hidden="true"
-                            >schedule</span
-                          >
-
-                          <span class="label_medium">2 minutes</span>
-                        </div>
-
-                        <button
-                          class="icon-btn has-state removed"
-                          aria-label="Add to saved recipes"
-                        >
-                          <span
-                            class="material-symbols-outlined bookmark-add"
-                            aria-hidden="true"
-                            >bookmark_add</span
-                          >
-                          <span
-                            class="material-symbols-outlined bookmark"
-                            aria-hidden="true"
-                            >bookmark</span
-                          >
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-
-                <li class="slider-item">
-                  <div class="card">
-                    <figure class="card-media img-holder">
-                      <img
-                        src="./image/recipe.jpg"
-                        alt="recipe name"
-                        width="200"
-                        height="200"
-                        class="img-cover"
-                        loading="lazy"
-                      />
-                    </figure>
-
-                    <div class="card-body">
-                      <h3 class="title_small">
-                        <a href="./detail.html" class="card-link"
-                          >Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Asperiores, nemo libero odit culpa et beatae
-                          repellendus at assumenda corrupti vitae animi iure
-                          consectetur ea quia ut rerum magni nobis
-                          architecto!</a
-                        >
-                      </h3>
-                      <div class="meta-wrapper">
-                        <div class="meta-item">
-                          <span
-                            class="material-symbols-outlined"
-                            aria-hidden="true"
-                            >schedule</span
-                          >
-
-                          <span class="label_medium">2 minutes</span>
-                        </div>
-
-                        <button
-                          class="icon-btn has-state removed"
-                          aria-label="Add to saved recipes"
-                        >
-                          <span
-                            class="material-symbols-outlined bookmark-add"
-                            aria-hidden="true"
-                            >bookmark_add</span
-                          >
-                          <span
-                            class="material-symbols-outlined bookmark"
-                            aria-hidden="true"
-                            >bookmark</span
-                          >
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-
-                <li class="slider-item" data-slider-item>
-                  <a href="./recipes.html" class="load-more-card has-state">
-                    <span class="label_large">Show more</span>
-
-                    <span class="material-symbols-outlined" aria-hidden="true"
-                      >navigate_next</span
-                    >
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </section>
+        ></section>
 
         <!--
       ---------------------- section__Recipe Slider (French recipes)---------------------
