--- a/recipes.html
+++ b/recipes.html
@@ -155,7 +155,7 @@
             <button
               class="close-btn has-state"
               aria-label="Close filter bar"
-              data-filter-toggle
+              data-filter-toggler
             >
               <span class="material-symbols-outlined" aria-hidden="true"
                 >close</span
@@ -1522,6 +1522,23 @@
                 </div>
               </div>
             </div>
+          </div>
+
+          <div class="filter-actions">
+            <button
+              class="btn btn-secondary label_large has-state"
+              data-filter-submit
+            >
+              Clear
+            </button>
+
+            <button
+              class="btn btn-primary label_large"
+              data-filter-toggler
+              data-filter-submit
+            >
+              Apply
+            </button>
           </div>
         </div>
       </article>
