btn-filter.active style

--- a/recipes.html
+++ b/recipes.html
@@ -153,7 +153,7 @@
             <p class="title_medium">Filters</p>
 
             <button
-              class="close-btn has-state"
+              class="icon-btn close-btn has-state"
               aria-label="Close filter bar"
               data-filter-toggler
             >
@@ -1540,6 +1540,33 @@
               Apply
             </button>
           </div>
+        </div>
+
+        <div class="overlay" data-overlay data-filter-toggler></div>
+
+        <div class="recipe-container container">
+          <div class="title-wrapper">
+            <h2 class="headline-small">All Recipes</h2>
+            <button
+              class="btn btn-secondary btn-filter has-icon has-state"
+              aria-label="Open filter bar"
+              data-filter-toggler
+              data-filter-btn
+            >
+              <span class="material-symbols-outlined" aria-hidden="true"
+                >filter_list</span
+              >
+
+              <div class="wrapper">
+                <span class="label_large">Filters</span>
+                <div class="badge label_small" data-filter-count>9</div>
+              </div>
+            </button>
+          </div>
+
+          <div class="grid-list" data-grid-list></div>
+
+          <div class="load-more grid-list" data-load-more></div>
         </div>
       </article>
     </main>
