--- a/recipes.html
+++ b/recipes.html
@@ -1527,7 +1527,7 @@
           <div class="filter-actions">
             <button
               class="btn btn-secondary label_large has-state"
-              data-filter-submit
+              data-filter-clear
             >
               Clear
             </button>
