--- a/recipes.html
+++ b/recipes.html
@@ -1559,7 +1559,7 @@
 
               <div class="wrapper">
                 <span class="label_large">Filters</span>
-                <div class="badge label_small" data-filter-count>9</div>
+                <div class="badge label_small" data-filter-count></div>
               </div>
             </button>
           </div>
