--- a/saved-recipes.html
+++ b/saved-recipes.html
@@ -1,11 +1,173 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="en" data>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!--
+         primary meta tags
+        -->
+    <title>Saved Recipes - Cook.io</title>
+    <meta name="title" content="Cook.io - Cooking made easy." />
+    <meta
+      name="description"
+      content="This is a recipe application made by Zhale-Elmi"
+    />
+    <!--
+        favicon
+    -->
+    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml" />
+
+    <!--
+        theme js
+    -->
+    <script src="./js/theme.js"></script>
+
+    <!--
+        GooGle fonts
+    -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&family=DM+Serif+Display&display=swap"
+      rel="stylesheet"
+    />
+    <!--
+        material icon
+    -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0..1,0"
+    />
+
+    <!--
+       custom css
+    -->
+    <link rel="stylesheet" href="./css/style.css" />
+
+    <!--
+       custom js
+    -->
+    <script src="./js/global.js" type="module"></script>
+    <script src="./js/saved_recipes.js" type="module"></script>
+  </head>
+  <body>
+    <!--
+      ---------------------- Header ---------------------
+    -->
+    <header class="header" data-header>
+      <a href="/" class="logo">
+        <img src="./image/logo-light.svg" alt="cook.io" class="logo-light" />
+        <img src="./image/logo-dark.svg" alt="cook.io" class="logo-dark" />
+      </a>
+      <!-- nav-->
+      <nav class="navbar">
+        <ul class="navbar-list">
+          <li>
+            <a href="/" class="nabar-link title_small has-state">Home</a>
+          </li>
+
+          <li>
+            <a href="./recipes.html" class="nabar-link title_small has-state"
+              >Recipes</a
+            >
+          </li>
+        </ul>
+      </nav>
+
+      <!-- button-->
+      <button
+        class="icon-btn theme-switch has-state"
+        aria-pressed="false"
+        aria-label="Toggle light and dark theme"
+        data-theme-btn
+      >
+        <span class="material-symbols-outlined light-icon" aria-hidden="true"
+          >light_mode</span
+        >
+        <span class="material-symbols-outlined dark-icon" aria-hidden="true"
+          >dark_mode</span
+        >
+      </button>
+
+      <!-- icone save-->
+      <a href="./saved-recipes.html" class="btn btn-primary has-icon">
+        <span class="material-symbols-outlined" aria-hidden="true">book</span>
+        <sapn class="span">Saved Recipes</sapn>
+      </a>
+    </header>
+
+    <!--
+      ---------------------- Mobile Nav ---------------------
+    -->
+    <nav class="mobile-nav" aria-label="primary">
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="./recipes.html" class="nav-link">
+            <span class="item-icon">
+              <span class="material-symbols-outlined" aria-hidden="true"
+                >lunch_dining</span
+              >
+            </span>
+            <span class="label-medium">Recipes</span>
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a href="/" class="nav-link">
+            <span class="item-icon">
+              <span class="material-symbols-outlined" aria-hidden="true"
+                >home</span
+              >
+            </span>
+            <span class="label-medium">Home</span>
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a href="./saved-recipes.html" class="nav-link" aria-current="true">
+            <span class="item-icon">
+              <span class="material-symbols-outlined" aria-hidden="true"
+                >book</span
+              >
+            </span>
+            <span class="label-medium">Saved</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+    <!--
+      ---------------------- Main ---------------------
+    -->
+    <main>
+      <article
+        class="article container saved-recipe-page"
+        data-saved-recipe-container
+      ></article>
+    </main>
+
+    <!--
+      ---------------------- Footer ---------------------
+    -->
+
+    <footer class="footer">
+      <p class="copyright body-medium">Copyright 2023 codewithsadee</p>
+
+      <a href="/" class="logo">
+        <img src="./image/logo-light.svg" alt="cook.io" class="logo-light" />
+        <img src="./image/logo-dark.svg" alt="cook.io" class="logo-dark" />
+      </a>
+
+      <a href="http://www.edamam.com/" target="_blank" class="edamam">
+        <img
+          src="./image/edamam.svg"
+          width="200"
+          height="40"
+          loading="lazy"
+          alt="edamam free recipe api"
+        />
+      </a>
+    </footer>
+  </body>
 </html>
