--- a/detail.html
+++ b/detail.html
@@ -64,13 +64,13 @@
       <nav class="navbar">
         <ul class="navbar-list">
           <li>
-            <a href="./recipes.html" class="nabar-link title_small has-state"
+            <a href="./recipes.html" class="navbar-link title_small has-state"
               >Home</a
             >
           </li>
 
           <li>
-            <a href="#" class="nabar-link title_small has-state">Recipes</a>
+            <a href="#" class="navbar-link title_small has-state">Recipes</a>
           </li>
         </ul>
       </nav>
