--- a/index.html
+++ b/index.html
@@ -64,11 +64,13 @@
       <nav class="navbar">
         <ul class="navbar-list">
           <li>
-            <a href="/" class="nabar-link title_small has-state active">Home</a>
+            <a href="/" class="navbar-link title_small has-state active"
+              >Home</a
+            >
           </li>
 
           <li>
-            <a href="/recipes.html" class="nabar-link title_small has-state"
+            <a href="/recipes.html" class="navbar-link title_small has-state"
               >Recipes</a
             >
           </li>
