--- a/saved-recipes.html
+++ b/saved-recipes.html
@@ -64,11 +64,11 @@
       <nav class="navbar">
         <ul class="navbar-list">
           <li>
-            <a href="/" class="nabar-link title_small has-state">Home</a>
+            <a href="/" class="navbar-link title_small has-state">Home</a>
           </li>
 
           <li>
-            <a href="./recipes.html" class="nabar-link title_small has-state"
+            <a href="./recipes.html" class="navbar-link title_small has-state"
               >Recipes</a
             >
           </li>
