--- a/index.html
+++ b/index.html
@@ -809,7 +809,9 @@
     -->
 
     <footer class="footer">
-      <p class="copyright body-medium">Copyright 2023 codewithsadee</p>
+      <p class="copyright body-medium">
+        <a href="https://github.com/zhale-el">github: Zhale-el</a>
+      </p>
 
       <a href="/" class="logo">
         <img src="./image/logo-light.svg" alt="cook.io" class="logo-light" />
